--- a/index.html
+++ b/index.html
@@ -211,7 +211,11 @@
             top: 105%;
        }
 
-       
+       #aboutOverlay,
+       #contactOverlay {
+           display: none;
+       }
+
 
 
         /* Hero Section */
