--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@
             box-sizing: border-box;
         }
 
+        @media (max-width: 768px) {
+            .navigation {
+                padding: 0 5px;
+            }
+        }
+
         .nav-links {
             display: flex;
             list-style: none;
