--- a/index.html
+++ b/index.html
@@ -151,6 +151,12 @@
             gap: 2rem;
         }
 
+        @media (max-width: 768px) {
+            .nav-links {
+                gap: 5px;
+                font-size: 1vw;
+            }
+
         .nav-links a {
             color: #ccc;
             text-decoration: none;
