--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
             .nav-links {
                 gap: 5px;
                 font-size: 2.5vw;
+                display: grid;
             }
         }
 
