--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
                 gap: 5px;
                 font-size: 2.5vw;
                 display: grid;
+                grid-template-columns: repeat(2, 1fr);
             }
         }
 
