--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
 
         @media (max-width: 768px) {
             .nav-links {
-                gap: 15px;
+                row-gap: 7px;
+                column-gap: 15px;
                 font-size: 3vw;
                 display: grid;
                 grid-template-columns: repeat(2, 1fr);
