--- a/index.html
+++ b/index.html
@@ -1439,7 +1439,8 @@
                 const href = this.getAttribute('href');
                 const target = document.querySelector(href);
                 if (target) {
-                    target.scrollIntoView({
+                    target.scrollTo({
+                        top: 0;
                         behavior: 'smooth',
                         block: 'start'
                      });
