--- a/index.html
+++ b/index.html
@@ -1437,9 +1437,9 @@
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
                 const href = this.getAttribute('href');
-                const target = document.querySelector(href);
+                
                 if (href === 'home') {
-                    window.scrollto({
+                    window.scrollTo({
                         top: 0,
                         behavior: 'smooth',
                         block: 'start'
@@ -1449,7 +1449,20 @@
                          history.pushState(null, null, href);
                          handleHashChange(); // Falls der Hash nicht von selbst ausgelöst wird
                      }, 400);
+                } else {
+                    const target = document.querySelector(href);
+                    if (target) {
+                        target.scrollIntoView({
+                            behavior: 'smooth',
+                            block: 'start'
+                        });
+                        setTimeout(() => {
+                            history.pushState(null, null, href);
+                            handleHashChange();
+                        }, 400);
+                    }
                 }
+                
             });
         });
 
