--- a/index.html
+++ b/index.html
@@ -887,6 +887,10 @@
             color: #666;
         }
 
+        .footer .container * {
+            font-size: 5vw;
+        }
+
         @media (max-width: 768px) {
             .btn-cart .quantity {
                 color: #005F4E !important;
