--- a/index.html
+++ b/index.html
@@ -885,11 +885,9 @@
             padding: 2rem 0;
             text-align: center;
             color: #666;
+            font-size: clamp(1rem, 2vw, 2rem);
         }
 
-        .footer .container * {
-            font-size: 5vw;
-        }
 
         @media (max-width: 768px) {
             .btn-cart .quantity {
