--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
             padding: 2rem 0;
             text-align: center;
             color: #666;
-            font-size: clamp(1rem, 2vw, 2rem);
+            font-size: 30px;
         }
 
 
