--- a/about.html
+++ b/about.html
@@ -354,8 +354,8 @@
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#team">Products</a></li>
-                <li><a href="#contact">Kontakt</a></li>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
