--- a/about.html
+++ b/about.html
@@ -352,10 +352,10 @@
         <nav class="container">
             <a href="#" class="logo">InnovateTech</a>
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
+                <li><a href="index.html#home">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#products">Products</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="index.html#products">Products</a></li>
+                <li><a href="contact.html#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
