--- a/about.html
+++ b/about.html
@@ -25,15 +25,17 @@
         }
 
         header {
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(0, 0, 0, 0.8);
             backdrop-filter: blur(10px);
-            border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-            padding: 20px 0;
             position: fixed;
             width: 100%;
             top: 0;
-            z-index: 100;
-            transition: all 0.3s ease;
+            z-index: 1000;
+            border-bottom: 1px solid #333;
+            height: 80px; /* Feste Höhe für den Header */
+            display: flex;
+            align-items: center; /* Logo wird schön vertikal zentriert */
+            box-sizing: border-box; /* Damit das Padding nicht die Höhe aufbläht */
         }
 
         header.scrolled {
