--- a/about.html
+++ b/about.html
@@ -32,10 +32,9 @@
             top: 0;
             z-index: 1000;
             border-bottom: 1px solid #333;
-            height: 80px; /* Feste Höhe für den Header */
-            display: flex;
-            align-items: center; /* Logo wird schön vertikal zentriert */
-            box-sizing: border-box; /* Damit das Padding nicht die Höhe aufbläht */
+            height: 80px;
+            padding: 20px 0;
+            transition: all 0.3s ease;
         }
 
         header.scrolled {
