--- a/about.html
+++ b/about.html
@@ -48,6 +48,11 @@
             align-items: center;
         }
 
+        nav .container {
+            display: flex;
+            justify-content: space-between;
+        }
+
         .logo {
             font-size: 24px;
             font-weight: bold;
