--- a/about.html
+++ b/about.html
@@ -45,6 +45,7 @@
         nav {
             display: flex;
             justify-content: space-between;
+            padding: 0 40px;
         }
 
         .logo {
@@ -349,7 +350,7 @@
 </head>
 <body>
     <header id="header">
-        <nav class="container">
+        <nav>
             <a href="#" class="logo">InnovateTech</a>
             <ul class="nav-links">
                 <li><a href="index.html#home">Home</a></li>
