--- a/about.html
+++ b/about.html
@@ -48,12 +48,28 @@
             padding: 0 40px;
         }
 
+        /* Logo */
         .logo {
-            font-size: 24px;
-            font-weight: bold;
-            color: white;
-            text-decoration: none;
-            transition: color 0.3s ease;
+            max-height: 50%;
+            height: auto;
+            width: auto;
+        }
+        
+        .mobile {
+            display: none;
+        }
+
+        .desktop {
+            display: block;
+        }
+
+        @media (max-width: 768px) {
+            .mobile {
+                display: block;
+            }
+            .desktop {
+                display: none;
+            }
         }
 
         header.scrolled .logo {
@@ -351,7 +367,8 @@
 <body>
     <header id="header">
         <nav>
-            <a href="#" class="logo">InnovateTech</a>
+            <img src="images/logos/SimplifiedLogo.png" class="logo mobile" />
+            <img src="images/logos/MainLogo.png" class="logo desktop" />
             <ul class="nav-links">
                 <li><a href="index.html#home">Home</a></li>
                 <li><a href="#about">About</a></li>
