--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         .logo {
             max-height: 50%;
             height: auto;
-            width: auto;
+            width: 5vw;
         }
         
         .mobile {
