--- a/about.html
+++ b/about.html
@@ -46,13 +46,14 @@
             display: flex;
             justify-content: space-between;
             padding: 0 40px;
+            height: 100%;
         }
 
         /* Logo */
         .logo {
             max-height: 50%;
             height: auto;
-            width: 50vw;
+            width: auto;
         }
         
         .mobile {
