--- a/about.html
+++ b/about.html
@@ -46,6 +46,7 @@
             justify-content: space-between;
             padding: 0 40px;
             height: 100%;
+            align-items: center;
         }
 
         /* Logo */
