--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
             left: 0;
             width: 0;
             height: 2px;
-            background: #ff6b6b;
+            background: #005F4E;
             transition: width 0.3s ease;
         }
 
