--- a/index.html
+++ b/index.html
@@ -172,6 +172,21 @@
             color: #fff;
         }
 
+        .nav-links a::after {
+            content: '';
+            position: absolute;
+            bottom: -5px;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background: #005F4E; /* Das ist das grüne Unterstreichungs-Ding */
+            transition: width 0.3s ease;
+        }
+
+        .nav-links a:hover::after {
+            width: 100%; /* Beim Hover wächst der Strich auf die volle Breite */
+        }
+
         .btn-cart {
             position: relative;
             display: flex;
