--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
             text-decoration: none;
             transition: color 0.3s ease;
             font-weight: 500;
+            position: relative;
         }
 
         .nav-links a::after {
