--- a/about.html
+++ b/about.html
@@ -172,7 +172,7 @@
             left: 0;
             right: 0;
             height: 5px;
-            background: linear-gradient(90deg, #ff6b6b, #4ecdc4, #45b7d1);
+            background: linear-gradient(90deg, #005F4E, #171717, #005F4E);
         }
 
         .story-content {
