--- a/about.html
+++ b/about.html
@@ -157,7 +157,7 @@
 
 
         .story-section {
-            background: white;
+            background: radial-gradient(circle at center, #1a1a1a 0%, #0a0a0a 100%);
             padding: 100px 0;
             margin: 80px 0;
             border-radius: 30px;
