--- a/about.html
+++ b/about.html
@@ -5,6 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Über Uns - InnovateTech</title>
     <style>
+
+        @font-face {
+           font-family: 'HeadlineFont';
+           src: url('fonts/Bezmiar-Regular.otf') format('opentype');
+           font-weight: 700;
+        }
+
+        @font-face {
+           font-family: 'MainFont1';
+           src: url('fonts/Mavoble.ttf') format('truetype');
+           font-weight: 400;
+        }
+
+        @font-face {
+            font-family: 'GoofyFont';
+            src: url('fonts/Iceland-Regular.ttf') format('truetype');
+            font-weight: 400;
+        }
+
+        @font-face {
+            font-family: 'MainFont';
+            src: url('fonts/Relevance-trial-Regular.ttf') format('truetype');
+            font-weight: 400;
+        }
+        
         * {
             margin: 0;
             padding: 0;
