--- a/about.html
+++ b/about.html
@@ -164,6 +164,7 @@
 
         .hero h1 {
             font-size: 4rem;
+            font-family: 'HeadlineFont';
             margin-bottom: 20px;
             opacity: 0;
             animation: fadeInUp 1s ease forwards;
@@ -171,6 +172,7 @@
 
         .hero p {
             font-size: 1.3rem;
+            font-family: 'MainFont';
             margin-bottom: 40px;
             opacity: 0;
             animation: fadeInUp 1s ease 0.3s forwards;
