--- a/about.html
+++ b/about.html
@@ -160,6 +160,7 @@
             text-align: center;
             padding: 100px 0;
             color: white;
+            background: radial-gradient(circle at center, #1a1a1a 0%, #0a0a0a 100%);
         }
 
         .hero h1 {
@@ -184,7 +185,7 @@
 
 
         .story-section {
-            background: radial-gradient(circle at center, #1a1a1a 0%, #0a0a0a 100%);
+            background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%);
             padding: 100px 0;
             margin: 80px 0;
             border-radius: 30px;
