--- a/about.html
+++ b/about.html
@@ -229,7 +229,7 @@
 
         .story-text p {
             font-size: 1.1rem;
-            color: #666;
+            color: white;
             margin-bottom: 20px;
             line-height: 1.8;
         }
@@ -239,11 +239,9 @@
             position: relative;
         }
 
-        .story-image::before {
-            content: '🚀';
-            font-size: 8rem;
-            display: block;
-            animation: float 3s ease-in-out infinite;
+        .story-image img {
+            max-width: 100%;
+            height: auto;
         }
 
         .team-section {
@@ -436,6 +434,7 @@
                         <p>Heute sind wir stolz darauf, mit einem internationalen Team von Experten die Grenzen des Möglichen zu verschieben und unseren Kunden dabei zu helfen, ihre Ziele zu erreichen.</p>
                     </div>
                     <div class="story-image">
+                        <img src="images/HQ.png" alt="Loading..."
                     </div>
                 </div>
             </div>
