--- a/about.html
+++ b/about.html
@@ -242,6 +242,7 @@
         .story-image img {
             max-width: 100%;
             height: auto;
+            border-radius: 12px;
         }
 
         .team-section {
