--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,7 @@
                         <picture>
                             <source media="(max-width: 768px)" srcset="images/Image1.2.png">
                             <source media="(min-width: 769px)" srcset="images/Image1.1.png">
-                            <img src="images/Image1.1.png"> alt="Your Browser doesn't fit">
+                            <img src="images/Image1.1.png"> alt="Loading...">
                         </picture>
                     </div>
                 </div>
@@ -1056,7 +1056,7 @@
                         <picture>
                             <source media="(max-width: 768px)" srcset="images/Image2.2.png">
                             <source media="(max-width: 768px)" srcset="images/Image2.1.png">
-                            <img src="images/Image2.1.png"> alt="Your Browser doesn't fit">
+                            <img src="images/Image2.1.png"> alt="Loading...">
                         </picture>
     
                 </div>
