--- a/about.html
+++ b/about.html
@@ -294,6 +294,13 @@
             background: rgba(255, 255, 255, 0.15);
         }
 
+        .team-pic img {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+
         .team-avatar {
             width: 100px;
             height: 100px;
@@ -459,9 +466,9 @@
                 <h2>Unser Team</h2>
                 <div class="team-grid">
                     <div class="team-card">
-                        <div class="team-avatar">AS</div>
-                        <div class="team-name">Anna Schmidt</div>
-                        <div class="team-role">CEO & Gründerin</div>
+                        <div class="team-pic"> <img src="images/Team/CEO.png"></div>
+                        <div class="team-name">macrosoft</div>
+                        <div class="team-role">CEO & Founder</div>
                         <div class="team-bio">Visionäre Führungskraft mit 15 Jahren Erfahrung in der Tech-Branche. Anna treibt Innovation voran und inspiriert unser Team täglich.</div>
                     </div>
                     <div class="team-card">
