--- a/about.html
+++ b/about.html
@@ -438,8 +438,8 @@
     <main>
         <section class="hero" id="home">
             <div class="container">
-                <h1>Wir gestalten die Zukunft</h1>
-                <p>Mit Leidenschaft, Innovation und einem außergewöhnlichen Team verwandeln wir Visionen in bahnbrechende digitale Lösungen.</p>
+                <h1>Breaking the illusion,<br>building your truth!</h1>
+                <p>The osjdckjewfbhclie.</p>
                 
 
             </div>
