--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
         }
 
         .hero h1 {
-            font-size: 4vw;
+            font-size: 80%;
             font-family: 'HeadlineFont';
             margin-bottom: 20px;
             opacity: 0;
