--- a/about.html
+++ b/about.html
@@ -158,7 +158,7 @@
 
         .hero {
             text-align: center;
-            padding: 10px 0;
+            padding: 90px 0;
             color: white;
             background: radial-gradient(circle at center, #1a1a1a 0%, #0a0a0a 100%);
         }
@@ -169,6 +169,12 @@
             margin-bottom: 20px;
             opacity: 0;
             animation: fadeInUp 1s ease forwards;
+        }
+
+        @media (max-width: 768px) {
+            .hero h1{
+                font-size: 1vw;
+            }
         }
 
         .hero p {
