--- a/about.html
+++ b/about.html
@@ -218,7 +218,7 @@
 
         .story-text h2 {
             font-size: 2.5rem;
-            color: #333;
+            color: white;
             margin-bottom: 30px;
             position: relative;
         }
@@ -230,7 +230,7 @@
             left: 0;
             width: 50px;
             height: 3px;
-            background: #ff6b6b;
+            background: #005F4E;
         }
 
         .story-text p {
