--- a/about.html
+++ b/about.html
@@ -164,17 +164,11 @@
         }
 
         .hero h1 {
-            font-size: 80%;
+            font-size: clamp(2rem, 6vw, 4rem);
             font-family: 'HeadlineFont';
             margin-bottom: 20px;
             opacity: 0;
             animation: fadeInUp 1s ease forwards;
-        }
-
-        @media (max-width: 768px) {
-            .hero h1{
-                font-size: 1vw;
-            }
         }
 
         .hero p {
