--- a/about.html
+++ b/about.html
@@ -200,7 +200,7 @@
             left: 0;
             right: 0;
             height: 5px;
-            background: linear-gradient(90deg, #005F4E, #171717, #005F4E);
+            background: linear-gradient(90deg, #171717, #005F4E, #171717);
         }
 
         .story-content {
