--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
         }
 
         .hero h1 {
-            font-size: clamp(2rem, 6vw, 4rem);
+            font-size: clamp(1rem, 2vw, 1.5rem);
             font-family: 'HeadlineFont';
             margin-bottom: 20px;
             opacity: 0;
@@ -421,6 +421,7 @@
         }
     </style>
 </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
     <header id="header">
         <nav>
