--- a/about.html
+++ b/about.html
@@ -164,11 +164,15 @@
         }
 
         .hero h1 {
-            font-size: clamp(1rem, 2vw, 1.5rem);
+            font-size: clamp(1.5rem, 5vw, 4rem);
             font-family: 'HeadlineFont';
             margin-bottom: 20px;
             opacity: 0;
             animation: fadeInUp 1s ease forwards;
+            max-width: 90%;
+            margin-left: auto;
+            margin-right: auto;
+            word-break: break-word;
         }
 
         .hero p {
@@ -410,10 +414,6 @@
         }
 
         @media (max-width: 768px) {
-            .hero h1 {
-                font-size: 2.5rem;
-            }
-            
             .story-content {
                 grid-template-columns: 1fr;
                 text-align: center;
