--- a/about.html
+++ b/about.html
@@ -176,7 +176,7 @@
         }
 
         .hero p {
-            font-size: 1.3rem;
+            font-size: clamp(0.8rem, 1.2vw, 1.1rem);
             font-family: 'MainFont';
             margin-bottom: 40px;
             opacity: 0;
