--- a/index.html
+++ b/index.html
@@ -97,6 +97,12 @@
             box-sizing: border-box; /* Damit das Padding nicht die Höhe aufbläht */
         }
 
+        @media (min-width: 769px) {
+            .header {
+                display: none;
+            }
+        }
+
 
         /* Logo */
         .logo {
