--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         }
 
         @media (min-width: 769px) {
-            .header {
+            header {
                 display: none;
             }
         }
