--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
 
             .logo.desktop {
                 justify-self: start;
+                max-height: 50px;
+                height: auto;
+                width: auto;
             }
 
             .cart-icon {
@@ -160,7 +163,7 @@
             width: 100%;
             max-width: none;
             margin: 0;
-            padding 0 20px;
+            padding: 0 20px;
             box-sizing: border-box;
         }
 
