--- a/about.html
+++ b/about.html
@@ -313,7 +313,7 @@
         .team-avatar {
             width: 100px;
             height: 100px;
-            background: linear-gradient(135deg, #ff6b6b, #4ecdc4);
+            background: linear-gradient(190deg,rgba(0, 0, 0, 1) 5%, rgba(0, 95, 78, 1) 100%);
             border-radius: 50%;
             margin: 0 auto 20px;
             display: flex;
