--- a/about.html
+++ b/about.html
@@ -332,7 +332,7 @@
         }
 
         .team-role {
-            color: #ff6b6b;
+            color: #005F4E;
             font-weight: 500;
             margin-bottom: 15px;
         }
