--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@
             box-sizing: border-box;
         }
 
+        .nav-right {
+            display: flex;
+            align-items: center;
+            gap: 20px; /* sorgt für Abstand zwischen Warenkorb und Navigation */
+        }
+
         @media (max-width: 768px) {
             .navigation {
                 padding: 0 5px;
