--- a/index.html
+++ b/index.html
@@ -1298,7 +1298,7 @@
         let currentProduct = null;
 
         const products = {
-            'premium-smartphone': {
+            'diver': {
                 name: 'Diver',
                 price: 2,
                 icon: '📱',
@@ -1320,7 +1320,7 @@
                 },
                 images: ['📱', '📷', '🔋', '📡']
             },
-            'wireless-headphones': {
+            'submarine': {
                 name: 'Submarine',
                 price: 10,
                 icon: '🎧',
@@ -1342,7 +1342,7 @@
                 },
                 images: ['🎧', '🔊', '🔋', '📶']
             },
-            'smart-watch': {
+            'moses': {
                 name: 'Moses',
                 price: 0,
                 icon: '⌚',
