--- a/index.html
+++ b/index.html
@@ -547,10 +547,8 @@
         .product-modal,
         .product-modal1 {
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
             background: rgba(0, 0, 0, 0.9);
             backdrop-filter: blur(10px);
             box-sizing: border-box;
@@ -563,7 +561,8 @@
             transition: opacity 0.3s ease;
         }
 
-        .product-modal.active {
+        .product-modal.active,
+        .product-modal1.active {
             display: flex;
             opacity: 1;
         }
