--- a/index.html
+++ b/index.html
@@ -1012,13 +1012,14 @@
                      <li><a href="#home">Home</a></li>
                      <li><a href="about.html#about">About</a></li>
                      <li><a href="#products">Products</a></li>
-                     <li><a href="contact.html#contact">Contact</a></li>
+                     <li><a href="downlads.html#downloads">Downloads</a></li>
                  </ul>
             </div>
         </nav>
     </header>
 
     <div id="aboutOverlay" class="overlay">About Content</div>
+    <div id="downloadsOverlay" class="overlay">Downloads Content</div>
     <div id="contactOverlay" class="overlay">Contact Content</div>
 
     <main>
@@ -1476,15 +1477,17 @@
         function handleHashChange() {
             const hash = window.location.hash.toLowerCase();
             const aboutOverlay = document.getElementById('aboutOverlay');
+            const downloadsOverlay = document.getElementById('downloadsOverlay');
             const contactOverlay = document.getElementById('contactOverlay');
   
             aboutOverlay.classList.remove('active');
+            downloadsOverlay.classList.remove('active');
             contactOverlay.classList.remove('active');
 
             if (hash === '#about') {
                 aboutOverlay.classList.add('active');
             } else if (hash === '#contact') {
-                contactOverlay.classList.add('active');
+                downloadsOverlay.classList.add('active');
             }
             // #home und #products schließen alles
         }
