--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,7 @@
                      <li><a href="#home">Home</a></li>
                      <li><a href="about.html#about">About</a></li>
                      <li><a href="#products">Products</a></li>
-                     <li><a href="downlads.html#downloads">Downloads</a></li>
+                     <li><a href="downloads.html#downloads">Downloads</a></li>
                  </ul>
             </div>
         </nav>
