--- a/index.html
+++ b/index.html
@@ -1253,7 +1253,7 @@
             </div>
             
             <div class="footer-right">
-                <a href="#contact" class="contact-btn">Contact</a>
+                <a href="contact.html#contact" class="contact-btn">Contact</a>
             </div>
         </div>
     </footer>
