--- a/downloads.html
+++ b/downloads.html
@@ -539,7 +539,7 @@
                 <li><a href="index.html#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="index.html#products">Products</a></li>
-                <li><a href="contact.html#contact">Contact</a></li>
+                <li><a href="downloads.html#downloads">Downloads</a></li>
             </ul>
         </nav>
     </header>
