--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Über Uns - InnovateTech</title>
+    <title>About us - BTC</title>
     <style>
 
         @font-face {
