--- a/downloads.html
+++ b/downloads.html
@@ -170,6 +170,12 @@
             animation: fadeInUp 1s ease forwards;
         }
 
+        @media (max-width: 768px) {
+            .downloads-hero h1 {
+                font-size: 70vw;
+            }
+        }
+
         .downloads-hero p {
             font-size: clamp(1rem, 2vw, 1.2rem);
             font-family: 'MainFont';
