--- a/downloads.html
+++ b/downloads.html
@@ -46,7 +46,7 @@
         }
 
         .container {
-            max-width: 1200px;
+            max-width: 100vw;
             margin: 0 auto;
             padding: 0 20px;
         }
