--- a/downloads.html
+++ b/downloads.html
@@ -46,7 +46,7 @@
         }
 
         .container {
-            max-width: 100vw;
+            max-width: 1200px;
             margin: 0 auto;
             padding: 0 20px;
         }
@@ -167,7 +167,7 @@
 
         @media (max-width: 768px) {
             .downloads-hero h1 {
-                font-size: 70vw;
+                font-size: 1vw;
             }
         }
 
