--- a/downloads.html
+++ b/downloads.html
@@ -489,7 +489,7 @@
         <section class="downloads-hero">
             <div class="container">
                 <h1>Downloads</h1>
-                <p>Laden Sie unsere Software herunter und entdecken Sie die Möglichkeiten</p>
+                <p>Download the Software for your Key here</p>
             </div>
         </section>
 
@@ -500,8 +500,7 @@
                         <div class="download-icon">🚢</div>
                         <h3 class="download-title">Submarine</h3>
                         <p class="download-description">
-                            Eine leistungsstarke Software für maritime Navigation und Unterwasser-Operationen. 
-                            Perfekt für professionelle Anwendungen und Simulationen.
+                            The fitting Software for the Submarine-Membership
                         </p>
                         <a href="#" class="download-btn" onclick="downloadSoftware('submarine')">
                             Download Submarine
@@ -512,18 +511,17 @@
                         <div class="download-icon">⚡</div>
                         <h3 class="download-title">Moses</h3>
                         <p class="download-description">
-                            Ein vielseitiges Tool für Datenanalyse und Projektmanagement. 
-                            Steigern Sie Ihre Produktivität mit intelligenten Funktionen.
+                            Coming soon!
                         </p>
                         <a href="#" class="download-btn" onclick="downloadSoftware('moses')">
-                            Download Moses
+                            Download Moses placeholder
                         </a>
                     </div>
                 </div>
 
                 <div class="membership-notice">
                     <h3>No membership yet? Get it here:</h3>
-                    <a href="index.html#products" class="membership-btn">Zur Mitgliedschaft</a>
+                    <a href="index.html#products" class="membership-btn">Products</a>
                 </div>
             </div>
         </section>
@@ -533,12 +531,12 @@
         <div class="container">
             <div class="footer-left">
                 <div class="impressum">
-                    <h3>Impressum</h3>
+                    <h3>Imprint</h3>
                     <p>Northpeak Solutions OÜ</p>
                     <p>Ahtri 12, 10151 Tallinn, Estonia</p>
                     <p>16543210</p>
                     <p>EE123456789</p>
-                    <p>support@northpeakshop.com</p>
+                    <p>info@btcoverinvest.com</p>
                 </div>
             </div>
             
