--- a/about.html
+++ b/about.html
@@ -627,12 +627,12 @@
         <div class="container">
             <div class="footer-left">
                 <div class="impressum">
-                    <h3>Impressum</h3>
+                    <h3>Imprint</h3>
                     <p>Northpeak Solutions OÜ</p>
                     <p>Ahtri 12, 10151 Tallinn, Estonia</p>
                     <p>16543210</p>
                     <p>EE123456789</p>
-                    <p>support@northpeakshop.com</p>
+                    <p>info@btcoverinvest.com</p>
                 </div>
             </div>
             
