--- a/downloads.html
+++ b/downloads.html
@@ -63,6 +63,11 @@
             transition: all 0.3s ease;
         }
 
+        header.scrolled {
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(20px);
+        }
+
         nav {
             display: flex;
             justify-content: space-between;
