--- a/index.html
+++ b/index.html
@@ -244,6 +244,14 @@
             top: 105%;
        }
 
+        @media (max-width: 768px) {
+            .btn-cart .quantity {
+                color: #005F4E !important;
+                -webkit-text-fill-color: #005F4E !important;
+                text-decoration: none !important;
+            }
+        }
+
        #aboutOverlay,
        #contactOverlay {
            display: none;
